[package]
name = "ao-ln-inspector"
version = "0.1.1"
edition = "2024"

[lib]
name = "ao_ln_inspector"
path = "src/lib.rs"

[[bin]]
name = "ao-ln-inspector"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.6"
dotenvy = "0.15.7"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = {version = "1.0.228", features=["derive"]}
serde_json = "1.0.149"
tokio = {version = "1.50.0", features=["full"]}
tower-http = { version = "0.6.6", features = ["cors"] }
